<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/letter_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/letter_customization"
        android:textColorHighlight="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/theme"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rgTheme"
        app:layout_constraintStart_toStartOf="@+id/rgTheme" />

    <RadioGroup
        android:id="@+id/rgTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <RadioButton
            android:id="@+id/rbLove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/love"
            android:textColor="@android:color/holo_red_light"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="@color/purple_200"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbHappy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/happy"
            android:textColor="#FF9800"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbSad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sad"
            android:textColor="@android:color/holo_blue_dark"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="291dp"
        android:layout_height="405dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="3dp"
        app:cardBackgroundColor="#74FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTheme">

        <EditText
            android:id="@+id/etReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/to_whom"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginTop="45dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/message"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="#546E7A" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="240dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional_items" />

            <CheckBox
                android:id="@+id/cbWithBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/with_background" />

            <CheckBox
                android:id="@+id/cbAddRandomQuote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/add_random_quote" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="168dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#B6977D"
        android:text="@string/create"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>